--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.2",
     "ant-design-vue": "4.x",
     "axios": "^1.5.0",
     "js-cookie": "^3.0.5",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
