--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.3.1",
+    "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-vue": "^9.16.1",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-vue": "^9.17.0",
     "less": "^4.2.0",
     "prettier": "^3.0.0",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vue-eslint-parser": "^9.3.1"
   }
 }
