--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ant-design-vue": "4.x",
     "axios": "^1.5.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-standard": "^8.0.1",
